Added new sample app to show contents of an URL: URLInfo Modified MMIOTest to support looping and to support external close event. Modified copy_files.cmd script to copy new plugins.

--- a/Test/makefile
+++ b/Test/makefile
@@ -5,7 +5,7 @@
 #
 # -----------------------------------------------------------------------------
 
-Build_Order = mmioinit mmiotest imagetest
+Build_Order = mmioinit mmiotest imagetest urlinfo
 
 # -----------------------------------------------------------------------------
 
